# rust_intro

./: .env  Cargo.toml  docker-compose.yml  openapi.yaml
src/: .env  main.rs
src/endpoints/: add.rs  divide.rs  greet.rs  health.rs  mod.rs  multiply.rs  oas.rs  recover.rs  square.rs  subtract.rs
src/handlers/: add.rs  adder.rs  divide.rs  divider.rs  greet.rs  health.rs  mod.rs  multiplier.rs  multiply.rs  square.rs  squarer.rs  subtract.rs  subtractor.rs
src/schemas/: component_types.rs  custom_errors.rs  divide.rs  greet_id_post_payload.json  greet_id_post_payload_schema.json  mod.rs  multiply.rs
src/utils/: environment.rs  mod.rs  validator.rs
web/swagger-ui-5.25.2/: .gitignore  Dockerfile  package.json
web/swagger-ui-5.25.2/src/core/: index.js
web/swagger-ui-5.25.2/src/core/plugins/json-schema-2020-12/: prop-types.js
web/swagger-ui-5.25.2/src/core/plugins/json-schema-2020-12-samples/: index.js
web/swagger-ui-5.25.2/src/core/plugins/json-schema-2020-12-samples/fn/: main.js
web/swagger-ui-5.25.2/src/core/plugins/json-schema-2020-12/components/: _all.scss  _mixins.scss
web/swagger-ui-5.25.2/src/core/plugins/json-schema-2020-12/components/ExpandDeepButton/: _expand-deep-button.scss
web/swagger-ui-5.25.2/src/core/plugins/json-schema-2020-12/components/JSONSchema/: _json-schema.scss
web/swagger-ui-5.25.2/src/core/plugins/json-schema-2020-12/components/JSONViewer/: _json-viewer.scss
web/swagger-ui-5.25.2/src/core/plugins/json-schema-5-samples/: index.js
web/swagger-ui-5.25.2/src/core/plugins/oas31/components/: _all.scss
(+10 files in other folders)
