[package]
name = "rust_intro"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.3.7"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
jsonschema = "0.30.0"
serde_json="1.0.140"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
